--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE Release)
 
 ## adding the following lines while cleaning the code
+MESSAGE( STATUS "CMAKE_C_COMPILER_ID: "         ${CMAKE_C_COMPILER_ID} )
 if (CMAKE_C_COMPILER_ID STREQUAL "GNU" )
     set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-unused-result -Wno-unused-parameter -ftree-vectorize -fopt-info -ffast-math -mavx2 ")
     #set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-unused-result -Wno-unused-parameter -ftree-vectorize -fopt-info -ffast-math ")
     #set(CMAKE_EXE_LINKER_FLAGS "-lm" )
-elseif ( CMAKE_C_COMPILER_ID STREQUAL "Intel" )
+elseif ( CMAKE_C_COMPILER_ID STREQUAL "IntelLLVM" )
     set(CMAKE_C_COMPILER "icx")
     set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -fvectorize  -qopt-report-file=stderr -qopt-report=max  -xCORE-AVX2")
     #set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -qopt-report=3 -qopt-report-phase=vec -xCORE-AVX2")
